<resources>
    <string name="app_name">FrameTabShift</string>
    <string name="tab_shift_tablayout_fragment">tabLayout + fragment切换页面</string>
    <string name="tab_shift_viewpager_fragment1">viewpager + Fragment</string>
    <string name="tab_shift_fragmenttabhost">fragmenttabhost</string>
    <string name="title_activity_bottom_navigation_view_demo">BottomNavigationViewDemoActivity
    </string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="tab_shift_fragment_hide_show">fragment + hide + show</string>
    <string name="tab_shift_bottomnavigationview">BottomNavigationView</string>
</resources>
